--- a/src/Views/Start/Home.css
+++ b/src/Views/Start/Home.css
@@ -1,8 +1,17 @@
 div.Home-Wrapper {
-    height: 100%;
-    width: 100%;
+    padding: 5em;
+    height: 75vh;
+    width: 75vh;
     margin: auto;
     display: Flex;
     flex-direction: column;
-    align-items: space-between;
+    justify-content: space-between;
+    align-items: center;
 }
+
+button.begin-button{
+    height: 4em;
+    width: 5em;
+    font-size: large;
+}
+
